# rust-playground

./: .gitignore  Cargo.toml  README.md
DataAnalysis/: README.md
DataAnalysis/polars-cc/: Cargo.toml
DataAnalysis/polars-cc/examples/: concepts.rs  expansion.rs  expr.rs  missing_data.rs  structs.rs
DataAnalysis/polars-cc/src/: main.rs
Opencv/face-detect/: Cargo.toml
Opencv/face-detect/examples/: 02-element-image.rs
Opencv/face-detect/src/: main.rs
Opencv/face-identify/: Cargo.toml
Opencv/face-identify/src/: edif_fiqa.rs  lib.rs  sface.rs  visualize.rs  yu_net.rs
Opencv/run-over-cv/: Cargo.toml
Opencv/run-over-cv/examples/: 01-basic.rs  01-version.rs  02-element-image.rs  04-operator-roi.rs  04-operator.rs  05-color-convert.rs  06-threshold-adaptive.rs  06-threshold.rs  07-geometry-flip.rs  07-geometry-resize.rs  07-geometry-rotate.rs  07-geometry-shift.rs  07-geometry_flip.rs  07-geometry_resize.rs  07-geometry_rotate.rs  07-geometry_shift.rs  08-draw-circle.rs  08-draw-ellipse.rs  08-draw-line.rs  08-draw-polygon.rs  08-draw-rect.rs  08-draw-text.rs  08-draw_circle.rs  08-draw_ellipse.rs  08-draw_line.rs  08-draw_polygon.rs  08-draw_rect.rs  08-draw_text.rs  09-mixture-blend.rs  09-mixture-roi.rs  09-mixture.rs  10-filter-linear-blur.rs  10-filter-linear-box.rs  10-filter-linear-gaussian.rs  10-filter-non-linear-bilateral.rs  10-filter-non-linear-median.rs  10-filter_linear_blur.rs  10-filter_linear_box.rs  10-filter_linear_gaussian.rs  10-filter_non_linear_bilateral.rs  (+38 more)
Opencv/run-over-cv/src/: imgutil.rs  lib.rs
playground/: Cargo.toml
