[package]
name = "polars-cc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
polars = { version = "0.52", features = [
    "lazy",           # LazyFrame
    "parquet",        # Parquet files
    "round_series",   # Round values
    "replace",        # Replace value
    "is_in",          # List filter
    "rows",           # Pivot data
    "cum_agg",        # Cumulative aggregate statistics
    "abs",            # Absolute value
    "aws",            # Read/write cloud (minio)
    "regex",          # Call columns with regex
    "fmt",            # Format tables as markdown
    "temporal",       # Temporal data types
    "timezones",      # Timezones
    # "dtype-date",     # Date data type
    # "dtype-datetime", # DateTime data type
    # "dtype-time",     # Time data type
] }
chrono = { version = "0.4" }


[lints]
workspace = true
