[package]
name = "face-detect"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
opencv = { version = "0.98" }
anyhow = "1.0"

[lints]
workspace = true
